--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "nodemon": "^2.0.16"
+    "mongoose": "^6.3.6",
+    "nodemon": "^2.0.16",
+    "validator": "^13.7.0"
   }
 }
