avancer models controler route

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,6 @@
 /config/.env
 /node_modules/
+[Cours _ Tuto] Apprendre React de Zéro en 2022.mp4
+[Javascript Full-stack] Projet MERN _ Créer un réseau social _ Partie Front-end.mp4
+[Javascript Full-stack] Projet MERN _ Créer un réseau social _ Partie Back-end (1).mp4
+mern-project-4871c6708bc595323eaf0ae7dea283dfc237da8d.zip
