--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.6",
+    "muter": "^0.7.0",
     "nodemon": "^2.0.16",
     "validator": "^13.7.0"
   }
