--- a/backend/package.json
+++ b/backend/package.json
@@ -2,20 +2,22 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.6",
-    "muter": "^0.7.0",
-    "nodemon": "^2.0.16",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.3.8",
+    "multer": "^1.4.5-lts.1",
     "validator": "^13.7.0"
   }
 }
